# crema

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/: PRD_READINESS_GAPS.md  README.md
docs/architecture/: OVERVIEW.md
docs/features/: CHAOS_TESTING.md  CHECKPOINTING.md  MEMBERLIST.md  METRICS.md  REQUEST_FORWARDING.md
docs/guides/: CONFIGURATION.md  GETTING_STARTED.md  MULTIRAFT_GUIDE.md
docs/status/: FEATURE_STATUS.md
examples/: auto-discovery.rs  basic.rs  checkpointing.rs  cluster.rs  memberlist-cluster.rs  metrics.rs  multiraft-cluster.rs
src/: config.rs  error.rs  lib.rs  types.rs
src/cache/: README.md  mod.rs  router.rs  storage.rs
src/checkpoint/: README.md  format.rs  manager.rs  mod.rs  raft_snapshot_data.rs  reader.rs  writer.rs
src/cluster/: README.md  discovery.rs  events.rs  memberlist_cluster.rs  memberlist_discovery.rs  membership.rs  mod.rs
src/consensus/: README.md  flow_control.rs  health.rs  mod.rs  node.rs  rocksdb_storage.rs  state_machine.rs  storage.rs  transport.rs  transport_tests.rs
src/metrics/: README.md  counters.rs  gauges.rs  histograms.rs  mod.rs
src/multiraft/: README.md  coordinator.rs  memberlist_integration.rs  migration.rs  migration_cleanup.rs  migration_metrics.rs  migration_orchestrator.rs  migration_routing.rs  migration_transport.rs  mod.rs  persistent_migration_store.rs  raft_migration.rs  router.rs  shard.rs  shard_forwarder.rs  shard_placement.rs  shard_recovery.rs  shard_registry.rs  shard_storage.rs
src/network/: README.md  mod.rs  rpc.rs  server.rs
src/partitioning/: README.md  hashring.rs  mod.rs  ownership.rs
src/rebalancing/: README.md  coordinator.rs  mod.rs  transfer.rs
src/testing/: README.md  cache_integration_tests.rs  mod.rs  (+14 more)
(+4 files in other folders)
