[package]
name = "crema"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
description = "Strongly consistent distributed cache with Raft consensus and Moka local cache"
keywords = ["cache", "distributed", "moka", "raft", "consensus"]
categories = ["caching", "network-programming"]

[features]
default = ["tokio"]
tokio = []

[dependencies]
# Local cache with automatic TTL/eviction
moka = { version = "0.12", features = ["future"] }

# Raft consensus
raft = "0.7"
slog = "2"
slog-stdlog = "4"
protobuf = "2"

# Cluster membership and discovery
nodecraft = { version = "0.8", features = ["default", "async", "agnostic", "resolver"] }

# Memberlist for gossip-based discovery
memberlist = { version = "0.7", features = [
  "tcp",
  "crc32",
  "snappy",
  "encryption",
  "tokio",
] }

# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt", "net", "io-util", "macros"] }
tokio-util = "0.7"
futures = "0.3"
async-channel = "2"

# Serialization
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Utilities
tracing = "0.1"
parking_lot = "0.12"
thiserror = "2"
crc = "3"

# Checkpointing
lz4_flex = "0.11"

# Consistent hashing
twox-hash = "2"

# Chaos testing
rand = "0.9"
slog-term = "2.9.2"

# String types
smol_str = "0.3"
tracing-test = "0.2.5"
socket2 = "0.6.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
test-log = "0.2"
[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "cluster"
path = "examples/cluster.rs"
